--- a/Requirements.txt
+++ b/Requirements.txt
@@ -1,12 +1,12 @@
- Requirements:
-pip3 install numpy,scipy patsy pandas
-pip3 install statsmodels
-pip3 install pmdarima
-pip install matplotlib
-pip install seaborn
-pip install tensorflow --user
-
-
-pip install graphviz
-pip install pydot
-pip install pydotplus
+numpy
+scipy
+patsy
+pandas
+statsmodels
+pmdarima
+matplotlib
+seaborn
+tensorflow
+graphviz
+pydot
+pydotplus
